[gd_scene load_steps=20 format=3 uid="uid://bakmp3c63fsg6"]

[ext_resource type="Script" path="res://src/map/map_screen.gd" id="1_fitck"]
[ext_resource type="Theme" uid="uid://cmaw5ierxgknn" path="res://src/map/theme.tres" id="1_ouo8q"]
[ext_resource type="PackedScene" uid="uid://bq6sff2no7cjn" path="res://src/map/dungeon/map_dungeon.tscn" id="1_uj5lt"]
[ext_resource type="PackedScene" uid="uid://ds2geaj03qxer" path="res://src/map/room/map_room.tscn" id="2_2ptas"]
[ext_resource type="PackedScene" uid="uid://br78wlhmv1luf" path="res://src/map/landmark/landmark_button.tscn" id="3_3yg1q"]
[ext_resource type="Texture2D" uid="uid://w1in1jbv3a3y" path="res://assets/gfx/ui/box_left.png" id="3_qohyb"]
[ext_resource type="Texture2D" uid="uid://te22pr8l07ek" path="res://assets/gfx/ui/icons/skull.png" id="5_cght2"]
[ext_resource type="PackedScene" uid="uid://c3miu0x2th1wn" path="res://src/map/room/room_button.tscn" id="6_3ekrt"]
[ext_resource type="Texture2D" uid="uid://bif5hcahyl5xr" path="res://assets/gfx/ui/icons/button-pink.png" id="6_lsfjl"]
[ext_resource type="PackedScene" uid="uid://d26khfur8dgqb" path="res://src/map/gui/evaluation_popup.tscn" id="7_tovqu"]
[ext_resource type="Texture2D" uid="uid://bp32cer6x0cq1" path="res://assets/gfx/ui/icons/button-green.png" id="7_wgqf0"]
[ext_resource type="StyleBox" uid="uid://s1obbxmodrpn" path="res://src/map/right_panel.tres" id="11_lakk8"]
[ext_resource type="AudioStream" uid="uid://cgg7qdbn62nt8" path="res://assets/sfx/Button-001.wav" id="11_njyrk"]
[ext_resource type="AudioStream" uid="uid://du5w7oqqg2kg8" path="res://assets/sfx/Button-002.wav" id="12_13x0s"]
[ext_resource type="AudioStream" uid="uid://dvoublyjf88hk" path="res://assets/sfx/Button-003.wav" id="13_u10yd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g4y17"]
texture = ExtResource("3_qohyb")
texture_margin_left = 42.0
texture_margin_top = 28.0
texture_margin_right = 12.0
texture_margin_bottom = 28.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_30sb4"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.447059, 0.764706, 0.635294, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_udfct"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_mp5wk"]
random_pitch = 3.08
random_volume_offset_db = 2.2
streams_count = 3
stream_0/stream = ExtResource("11_njyrk")
stream_1/stream = ExtResource("12_13x0s")
stream_2/stream = ExtResource("13_u10yd")

[node name="MapScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_ouo8q")
script = ExtResource("1_fitck")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0.054902, 0.109804, 1)

[node name="BuildPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 219.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_g4y17")

[node name="VBoxContainer" type="VBoxContainer" parent="BuildPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BuildLabel" type="Label" parent="BuildPanel/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "BUILD"

[node name="RoomsLabel" type="Label" parent="BuildPanel/VBoxContainer"]
layout_mode = 2
text = "Rooms"

[node name="RoomsContainer" type="GridContainer" parent="BuildPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="1x1" parent="BuildPanel/VBoxContainer/RoomsContainer" instance=ExtResource("6_3ekrt")]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
mouse_filter = 1
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
dungeon_path = NodePath("../../../../MapContainer/MapDungeon")

[node name="2x1" parent="BuildPanel/VBoxContainer/RoomsContainer" instance=ExtResource("6_3ekrt")]
custom_minimum_size = Vector2(72, 36)
layout_mode = 2
mouse_filter = 1
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
room_size = Vector2i(2, 1)
dungeon_path = NodePath("../../../../MapContainer/MapDungeon")

[node name="1x2" parent="BuildPanel/VBoxContainer/RoomsContainer" instance=ExtResource("6_3ekrt")]
custom_minimum_size = Vector2(36, 72)
layout_mode = 2
mouse_filter = 1
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
room_size = Vector2i(1, 2)
dungeon_path = NodePath("../../../../MapContainer/MapDungeon")

[node name="2x2" parent="BuildPanel/VBoxContainer/RoomsContainer" instance=ExtResource("6_3ekrt")]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
mouse_filter = 1
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
room_size = Vector2i(2, 2)
dungeon_path = NodePath("../../../../MapContainer/MapDungeon")

[node name="SpecialLabel" type="Label" parent="BuildPanel/VBoxContainer"]
layout_mode = 2
text = "landmarks"

[node name="LandmarkContainer" type="GridContainer" parent="BuildPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
columns = 4

[node name="LandmarkButton" parent="BuildPanel/VBoxContainer/LandmarkContainer" instance=ExtResource("3_3yg1q")]
layout_mode = 2
dungeon_path = NodePath("../../../../MapContainer/MapDungeon")

[node name="LandmarkButton2" parent="BuildPanel/VBoxContainer/LandmarkContainer" instance=ExtResource("3_3yg1q")]
layout_mode = 2
texture = ExtResource("5_cght2")
landmark_type = 1
dungeon_path = NodePath("../../../../MapContainer/MapDungeon")

[node name="LandmarkButton3" parent="BuildPanel/VBoxContainer/LandmarkContainer" instance=ExtResource("3_3yg1q")]
layout_mode = 2
texture = ExtResource("6_lsfjl")
landmark_type = 2
dungeon_path = NodePath("../../../../MapContainer/MapDungeon")

[node name="LandmarkButton4" parent="BuildPanel/VBoxContainer/LandmarkContainer" instance=ExtResource("3_3yg1q")]
layout_mode = 2
texture = ExtResource("7_wgqf0")
landmark_type = 3
dungeon_path = NodePath("../../../../MapContainer/MapDungeon")

[node name="Control" type="Control" parent="BuildPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EvaluateButton" type="Button" parent="BuildPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Evaluate"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 360
theme_override_constants/margin_top = 101

[node name="Panel" type="Panel" parent="MarginContainer"]
custom_minimum_size = Vector2(518, 518)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_30sb4")

[node name="MapContainer" type="Node2D" parent="."]
position = Vector2(363, 104)

[node name="MapDungeon" parent="MapContainer" instance=ExtResource("1_uj5lt")]
unique_name_in_owner = true
RoomScene = ExtResource("2_2ptas")

[node name="SolutionDungeon" parent="MapContainer" instance=ExtResource("1_uj5lt")]
unique_name_in_owner = true
RoomScene = ExtResource("2_2ptas")

[node name="SolutionOverlay" type="Panel" parent="MapContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(512, 620)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -54.0
offset_right = 512.0
offset_bottom = 566.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_ouo8q")
theme_override_styles/panel = SubResource("StyleBoxEmpty_udfct")

[node name="VBoxContainer" type="VBoxContainer" parent="MapContainer/SolutionOverlay"]
layout_mode = 2
offset_right = 512.0
offset_bottom = 620.0

[node name="MapLabel" type="Label" parent="MapContainer/SolutionOverlay/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "YOUR MAP"
horizontal_alignment = 1

[node name="Control" type="Control" parent="MapContainer/SolutionOverlay/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="Label" type="Label" parent="MapContainer/SolutionOverlay/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Hold left mouse button to see the solution"
horizontal_alignment = 1

[node name="TipPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = ExtResource("11_lakk8")

[node name="VBoxContainer" type="VBoxContainer" parent="TipPanel"]
layout_mode = 2
theme_override_constants/separation = 28

[node name="Label" type="Label" parent="TipPanel/VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Add rooms and landmarks by dragging them to the map
"
autowrap_mode = 3

[node name="Label2" type="Label" parent="TipPanel/VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Move rooms by dragging them. Drag them outside of the map to remove them."
autowrap_mode = 3

[node name="Label3" type="Label" parent="TipPanel/VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "move landmarks by holding shift while dragging them. Drag them outside a room to remove them."
autowrap_mode = 3

[node name="Label5" type="Label" parent="TipPanel/VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Toggle doors by clicking on door slots. Do not forget exit doors."
autowrap_mode = 3

[node name="Spacer" type="MarginContainer" parent="TipPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Label4" type="Label" parent="TipPanel/VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Press evaluate when the map is ready.
Ensure it is to scale!"
autowrap_mode = 3

[node name="EvaluationPopup" parent="." instance=ExtResource("7_tovqu")]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_left = -188.0

[node name="ClickSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_mp5wk")
bus = &"Sfx"

[connection signal="pressed" from="BuildPanel/VBoxContainer/EvaluateButton" to="." method="_on_evaluate_button_pressed"]
[connection signal="gui_input" from="MapContainer/SolutionOverlay" to="." method="_on_solution_overlay_gui_input"]
